fixed spacing in Shop categories

--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -64,6 +64,7 @@
       }
       select {
         border: solid black 2px;
+        color: black;
         padding: 0 0.2rem;
         height: 3rem;
         font-size: 1rem;
